syntax = "proto3";

package gatekeeper;

import "google/protobuf/struct.proto";

option go_package = "github.com/bignyap/go-admin/internal/gatekeeper/proto";

message RecordUsageRequest {
  string method = 1;
  string path = 2;
  string organization_name = 3;
}

message RecordUsageResponse {
  double cost = 1;
}

message ValidateRequestRequest {
  string organization_name = 1;
  string method = 3;
  string path = 4;
}

message ValidateRequestResponse {
  google.protobuf.Struct organization = 1;
  google.protobuf.Struct endpoint = 2;
  google.protobuf.Struct subscription = 3;
  int64 remaining = 4;
}

service GatekeeperService {
  rpc RecordUsage(RecordUsageRequest) returns (RecordUsageResponse);
  rpc ValidateRequest(ValidateRequestRequest) returns (ValidateRequestResponse);
}
